# SphericalTiling

./: .gitignore  CMakeLists.txt  FEATURE_SUMMARY.md  GUI_IMPLEMENTATION.md  MESH_OPTIONS_EXPLANATION.md  README.md  VERIFICATION.md  setup_deps.sh
include/: dual_construction.h  optimization.h  tile_graph.h
src/: benchmark.cpp  dual_construction.cpp  goldberg_subdivision.cpp  main.cpp  optimization.cpp  tile_graph.cpp
src/app/: CMakeLists.txt  benchmark.cpp  demo.cpp  gui_main.cpp
src/lib/geometric/: CMakeLists.txt
src/lib/geometric/include/: dual_construction.h  goldberg_subdivision.h  mesh_construction.h  templated_geometry.h  tile_graph.h
src/lib/geometric/src/: dual_construction.cpp  mesh_construction.cpp  tile_graph.cpp
src/lib/optimization/: CMakeLists.txt
src/lib/optimization/include/: optimization.h
src/lib/optimization/src/: optimization.cpp
src/lib/visualization/: CMakeLists.txt
src/lib/visualization/include/: camera.h  mesh_renderer.h
src/lib/visualization/src/: camera.cpp  mesh_renderer.cpp
